<resources>
    <string name="logo">FOOD FOR PLEASURE</string>
    <string name="next">Далее</string>
    <string name="enterBirthday">Введите дату рождения</string>
    <string name="enterSecondName">Введите свою фамилию</string>
    <string name="enterFirstName">Введите свое имя</string>
    <string name="registration">Далее</string>
    <string name="greetings">Вас приветствует</string>
    <string name="process">Рассчитать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monitor">Монитор</string>
    <string name="add">Добавить</string>
    <string name="profile">Профиль</string>
</resources>